# beuk

./: Cargo.toml  README.md
benches/: memory.rs
beuk_tests/: main.rs
examples/: compute.rs  multithreading.rs  render_graph.rs  rt.rs  texture.rs  triangle.rs
examples/render_graph/: blit.frag  blit.vert  present.comp  raycast.comp
examples/rt/: shader.comp
examples/texture/: shader.frag
examples/triangle/: shader.comp  shader.vert  test-nested.inc.comp  test.inc.comp
src/: buffer.rs  chunky_list.rs  compute_pipeline.rs  ctx.rs  graph.rs  graphics_pipeline.rs  hot_reload.rs  lib.rs  memory.rs  memory2.rs  pipeline.rs  shaders.rs  texture.rs
src/memory/: manager.rs  manager_lock.rs  mod.rs
