[package]
name = "beuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
ash = { git = "https://github.com/ash-rs/ash.git", features = ["linked"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
gpu-allocator = { git = "https://github.com/dylanblokhuis/gpu-allocator.git", features = ["vulkan", "ash"], rev = "9f1e44b038e8f8bf9529b1fb9df0f182935da16b" }
log = "0.4.19"
raw-window-handle = "0.5.2"
rayon = "1.7.0"
rspirv-reflect = "0.8.0"
serde = "1.0.171"
serde-hashkey = "0.4.5"
shaderc = "0.8.2"
tracing = "0.1.37"

[dev-dependencies]
winit = "0.28"
bytemuck = { version = "1.13", features = ["derive"] }
image = { version = "0.24", features = ["jpeg", "png"] }
tracing-subscriber = { version = "0.3" }
tracing-tracy = { version = "0.10" }
simple_logger = "4.2.0"
